Change package name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sprotyv Sms Broadcaster</string>
+    <string name="app_name">zarmy rip</string>
 
     <string name="token_input_label">API токен</string>
     <string name="token_input_error">Введіть ваш токен</string>
